# Pyderivatives

./: .gitignore  Hermite.py  Mixture_LWD.py  My_demo.py  New_Simulation_density.py  Pca.py  Pyderivatives5demo.ipynb  Pyderivatives_4_demo .ipynb  Pyderivatives_Demo_Brazilian_ETF.py  Pyderivatives_case_study_Brazilian RRA.py  Pyderivatives_quickstart_demo.py  README (1).md  README.md  REMX_RND.pkl  bliss_splines.py  hypergeometric.py  option_surface_estimator.py  option_surface_estimator_demo.py  pyproject.toml  readme.md  sieve.py  spectral.py
Call_Surface_Cleaner/: GLD_options.pkl  call_surface_demo.py  call_surface_precleaner.py
RND_simulator/: New_Simulation_density.py
Required_functions/: Generalized_Gamma.py  Hermite_Expansion_Jarrow_Rudd_1982.py  Heston_model.py  Heston_surface.py  Kou_model.py  Local_Regression.py  Option_market_helper.py  Pca.py  PricingKernel_estimator_schreindorfer_2025.py  bates.py  btc_options_demo.pkl  cubic_splines_bliss_2004.py  evolutionary_mixture_yi_2024.py  generalized_lambda_pricer.py  hypergeometric_spline_ruijin_2007.py  kou_heston.py  pricing_kernel_schreindorfer_2025.py  quartic_gev_figlewski_2010.py  readme  spectral_recovery_jean_monier_2013.py
data/: Chevron_options.pkl  brazil_etf_demo_mini.pkl
demodata/: XLE_stock.csv
pyderivatives/: __init__.py
pyderivatives.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyderivatives/Useful_functions/: __init__.py  merging_helpers.py
pyderivatives/conditional_pricing_kernel/: fit.py  panel_plots.py
pyderivatives/dealer_positioning/: __init__.py  dealer.py
pyderivatives/demodata/: UNG_stock.csv  USO_2013_2025_moments.pkl  USO_stock.csv  __init__.py  daily-treasury-rates (1).csv  daily-treasury-rates (3).csv  mini_uso_options.csv
pyderivatives/demonotebooks/: econometrics.py
replication_workbooks/: Parametric risk-neutral density estimation via finite lognormal Weibull mixtures_Replication.py
(+121 files in other folders)
