[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyderivatives"
version = "0.1.0"
description = "Option/pricing-kernel utilities and derivatives research toolkit"
readme = { text = "PyDerivatives", content-type = "text/plain" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Julian Beatty" }]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "cvxpy",
  "networkx",
  "pycwt",
  "statsmodels",
]

# ----------------------------------
# FIND ALL PACKAGES (incl. demodata)
# ----------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["pyderivatives*"]

# ----------------------------------
# INCLUDE PICKLED DEMO DATA
# ----------------------------------
[tool.setuptools.package-data]
pyderivatives = ["demodata/*.pkl"]
