[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyderivatives"
version = "0.1.0"
description = "Option/pricing-kernel utilities and derivatives research toolkit"
readme = { text = "PyDerivatives", content-type = "text/plain" }
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Julian Beatty" }]

dependencies = [
  "numpy>=2.0",
  "pandas>=3.0",
  "scipy>=1.14",
  "matplotlib>=3.9",
  "cvxpy>=1.5",
  "networkx>=3.3",
  "pycwt",
  "statsmodels>=0.14.6",
  "pyarrow>=13",
  "ecos",
  "plotly>=6.0",
"requests",
  "kaleido",
  "arch>=7.0",
	
]
# ----------------------------------
# FIND ALL PACKAGES (incl. demodata)
# ----------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["pyderivatives*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pyderivatives = ["demodata/*.csv", "demodata/*.pkl"]